--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <nav>
-      <ul>
+    <nav class="bg-blue-300 py-3">
+      <ul class="flex gap-10 w-4/5 mx-auto">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
 
-    <div class="header">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium fugit
-      inventore quod aspernatur repellat aperiam nobis. Veniam reprehenderit
-      laboriosam tempore, rerum ipsam placeat totam debitis error architecto
-      alias perspiciatis libero.
+    <div class="header bg-gray-300">
+      <p class="w-4/5 mx-auto py-20">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+        fugit inventore quod aspernatur repellat aperiam nobis. Veniam
+        reprehenderit laboriosam tempore, rerum ipsam placeat totam debitis
+        error architecto alias perspiciatis libero.
+      </p>
     </div>
 
-    <section>
-      <article>
+    <section class="flex gap-4 w-4/5 mx-auto my-14">
+      <article class="w-3/4">
         <h3>Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -31,9 +33,9 @@
           corporis laudantium. Libero neque quam aut earum fuga sapiente officia
           a error nostrum!
         </p>
-        <button>Learn more</button>
+        <button class="mt-10">Learn more</button>
       </article>
-      <article>
+      <article class="w-3/4">
         <h3>Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -41,9 +43,9 @@
           corporis laudantium. Libero neque quam aut earum fuga sapiente officia
           a error nostrum!
         </p>
-        <button>Learn more</button>
+        <button class="mt-10 bg-blue-600 p-1.5">Learn more</button>
       </article>
-      <article>
+      <article class="w-3/4">
         <h3>Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -51,11 +53,11 @@
           corporis laudantium. Libero neque quam aut earum fuga sapiente officia
           a error nostrum!
         </p>
-        <button>Learn more</button>
+        <button class="mt-10">Learn more</button>
       </article>
     </section>
-    <footer>
-        <p>Copyright iO Academy</p>
+    <footer class="bg-gray-500 p-0.5">
+      <p class="w-4/5 mx-auto my-20">Copyright iO Academy</p>
     </footer>
   </body>
 </html>
