--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <body>
     <nav class="bg-blue-300 py-3">
       <ul class="flex gap-10 w-4/5 mx-auto">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" class="hover:underline decoration-solid">Home</a></li>
+        <li><a href="#" class="hover:underline decoration-solid">About</a></li>
+        <li>
+          <a href="#" class="hover:underline decoration-solid">Contact</a>
+        </li>
       </ul>
     </nav>
 
@@ -24,40 +26,54 @@
       </p>
     </div>
 
-    <section class="flex gap-4 w-4/5 mx-auto my-14">
-      <article class="w-3/4">
-        <h3>Title</h3>
+    <section
+      class="flex flex-col justify-center md:flex-row gap-4 w-4/5 mx-auto my-14"
+    >
+      <article class="text-center mb-10 md:text-left">
+        <h3 class="mb-4 text-lg font-bold">Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
           perferendis, provident assumenda sint nemo facilis soluta consequatur
           corporis laudantium. Libero neque quam aut earum fuga sapiente officia
           a error nostrum!
         </p>
-        <button class="mt-10">Learn more</button>
+        <button
+          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10"
+        >
+          Learn more
+        </button>
       </article>
-      <article class="w-3/4">
-        <h3>Title</h3>
+      <article class="text-center mb-10 md:text-left">
+        <h3 class="mb-4 text-lg font-bold">Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
           perferendis, provident assumenda sint nemo facilis soluta consequatur
           corporis laudantium. Libero neque quam aut earum fuga sapiente officia
           a error nostrum!
         </p>
-        <button class="mt-10 bg-blue-600 p-1.5">Learn more</button>
+        <button
+          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10"
+        >
+          Learn more
+        </button>
       </article>
-      <article class="w-3/4">
-        <h3>Title</h3>
+      <article class="text-center md:text-left">
+        <h3 class="mb-4 text-lg font-bold">Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
           perferendis, provident assumenda sint nemo facilis soluta consequatur
           corporis laudantium. Libero neque quam aut earum fuga sapiente officia
           a error nostrum!
         </p>
-        <button class="mt-10">Learn more</button>
+        <button
+          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10"
+        >
+          Learn more
+        </button>
       </article>
     </section>
-    <footer class="bg-gray-500 p-0.5">
-      <p class="w-4/5 mx-auto my-20">Copyright iO Academy</p>
+    <footer class="bg-gray-500 py-5 mt-32">
+      <p class="w-4/5 mx-auto text-white">Copyright iO Academy</p>
     </footer>
   </body>
 </html>
