--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
 
     <section
-      class="flex flex-col justify-center md:flex-row gap-4 w-4/5 mx-auto my-14"
+      class="flex flex-col justify-center sm:flex-row gap-4 w-4/5 mx-auto my-14"
     >
-      <article class="text-center mb-10 md:text-left">
+      <article class="text-center mb-10 sm:text-left">
         <h3 class="mb-4 text-lg font-bold">Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -38,12 +38,12 @@
           a error nostrum!
         </p>
         <button
-          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10"
+          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10 rounded"
         >
           Learn more
         </button>
       </article>
-      <article class="text-center mb-10 md:text-left">
+      <article class="text-center mb-10 sm:text-left">
         <h3 class="mb-4 text-lg font-bold">Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -52,12 +52,12 @@
           a error nostrum!
         </p>
         <button
-          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10"
+          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10 rounded"
         >
           Learn more
         </button>
       </article>
-      <article class="text-center md:text-left">
+      <article class="text-center sm:text-left">
         <h3 class="mb-4 text-lg font-bold">Title</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -66,7 +66,7 @@
           a error nostrum!
         </p>
         <button
-          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10"
+          class="transition ease-in-out delay-6s bg-blue-600 hover:bg-blue-400 hover:scale-105 duration-700 p-1.5 text-white mt-10 rounded"
         >
           Learn more
         </button>
